--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <main>
     <h1>Hello from Angular App with Webpack</h1>
+    <ul>
+        <li *ngFor="let user of users">{{user.nickName}}</li>
+    </ul>
 </main>
